--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,8 @@
         "test": "phpunit --bootstrap vendor/autoload.php tests",
         "testdox": "phpunit --testdox tests"
 
+    },
+    "require": {
+        "fmihel/php-lib": "^0.0.1"
     }
 }
